tests/programs/invalid/transient.java
public class transient {
    public transient int x;
}